--- a/front-end/package.json
+++ b/front-end/package.json
@@ -41,6 +41,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "5.0.0",
 		"react-select": "^5.3.0",
+    "react-slick": "^0.29.0",
 		"react-spinner-animated": "^3.1.1",
 		"react-time-picker": "^4.5.0",
 		"react-transition-group": "^4.4.2",
@@ -48,6 +49,7 @@
 		"redux-thunk": "^2.4.1",
 		"sass": "^1.50.0",
 		"sass-loader": "^12.6.0",
+    "slick-carousel": "^1.8.1",
 		"style-loader": "^3.3.1",
 		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
